--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Email</title>
   </head>
   <body>
+    <!-- These columns are responsive and resize for desktop, ipad and iphone-->
     <div class="container my-container">
         <div class="row">
           <div class="col-md-3 first-column sections">
