nth attempt at merging

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!-- another attempt to reconcile local and remote branches-->
-
+<!-- another attempt to reconcile local and remote branches-->
 <!doctype html>
 <html lang="en">
   <head>
